update_ユーザ登録画面1枚目実装
-what
ユーザー登録画面（名前〜生年月日）を実装

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -1,5 +1,20 @@
 ja:
   activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              blank: "が入力されていません。"
+            password:
+              blank: "が入力されていません。"
+        # message:　　　　　　　　　　　　　　　　　　　←これは自分で作ったmodel
+        #   attributes:
+        #     title:　　　　　　　　　　　　　　　　　　←自分で作ったカラム名
+        #       blank: "が入力されていません。"
+        #     content:　　　　　　　　　　　　　　　　　←自分で作ったカラム名
+        #       blank: "が入力されていません。"
+
     attributes:
       user:
         current_password: "現在のパスワード"
