update_ユーザ登録view_崩れ修正
-what
SCSS・haml・ja.yml編集

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -5,9 +5,9 @@ ja:
         user:
           attributes:
             email:
-              blank: "が入力されていません。"
+              blank: ""
             password:
-              blank: "が入力されていません。"
+              blank: ""
         # message:　　　　　　　　　　　　　　　　　　　←これは自分で作ったmodel
         #   attributes:
         #     title:　　　　　　　　　　　　　　　　　　←自分で作ったカラム名
@@ -99,9 +99,9 @@ ja:
       not_locked: 'は凍結されていません。'
       not_saved:
         one: "エラーが発生したため %{resource} は保存されませんでした:"
-        other: "%{count} 件のエラーが発生したため %{resource} は保存されませんでした:"
+        other: "%{count} 件の記入漏れがあります。"
       taken: "は既に使用されています。"
-      blank: "が入力されていません。"
+      blank: ""
       too_short: "は%{count}文字以上に設定して下さい。"
       too_long: "は%{count}文字以下に設定して下さい。"
       invalid: "は有効でありません。"
